add nice to styles

--- a/vimeo-playlist-server/public/style.css
+++ b/vimeo-playlist-server/public/style.css
@@ -138,7 +138,7 @@ body * {
   padding: 10px 0;
 }
 
-/* Center gallery within slider bar */
+/* Center gallery within slider NICE bar */
 .slider-container {
   position: relative;
   display: flex;
