--- a/vimeo-playlist-server/public/style.css
+++ b/vimeo-playlist-server/public/style.css
@@ -1,3 +1,4 @@
+/* style.css */
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 
 /* Make the orange bleed all the way down */
@@ -138,13 +139,42 @@ body * {
   padding: 10px 0;
 }
 
-/* Center gallery within slider NICE bar */
-.slider-container {
-  position: relative;
-  display: flex;
-  align-items: center;
-  padding: 5px 0;
+/* Separator */
+.separator {
+  width: 75vw;
+  margin: 2rem auto;
+  border: none;
+  border-top: 1px solid rgba(255,255,255,0.5);
 }
+
+/* Saved Playlists section */
+#savedPlaylists {
+  width: 75vw;
+  margin: 0 auto 2rem;
+}
+#savedPlaylists h2 {
+  font-family: 'Anton', sans-serif;
+  text-transform: uppercase;
+  color: #fff;
+  margin-bottom: 1rem;
+}
+#playlistList {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+#playlistList li {
+  margin-bottom: 0.5rem;
+}
+#playlistList li.empty {
+  opacity: 0.7;
+}
+#playlistList a {
+  color: #fff;
+  text-decoration: none;
+}
+
+/* Slider inner gallery */
 .slider-container .video-gallery {
   max-width: 75vw;
   margin: 0 auto;
@@ -166,8 +196,8 @@ body * {
   padding: 5px;
   cursor: pointer;
 }
-.thumbnail:hover,
-.thumbnail.active {
+.thumbnail.active,
+.thumbnail:hover {
   border-color: #f04f24;
 }
 .thumbnail img {
